logs/mir.orbis.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mir'...
Listing './lib/python3.5/site-packages/mir/orbis'...
Compiling './lib/python3.5/site-packages/mir/orbis/hashcache.py'...
***   File "./lib/python3.5/site-packages/mir/orbis/hashcache.py", line 41
    con.execute(f"""CREATE TABLE IF NOT EXISTS sha256_cache (
        path TEXT NOT NULL,
        mtime INT NOT NULL,
        size INT NOT NULL,
        hexdigest TEXT NOT NULL,
        CONSTRAINT path_u UNIQUE (path)
        )""")
                                                             
                           
                           
                          
                                
                                       
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mir/orbis/pictus.py'...
***   File "./lib/python3.5/site-packages/mir/orbis/pictus.py", line 55
    digest: 'str' = hash_func(path)
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mir.orbis-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
